--- a/js-snack-es-6-3/index.html
+++ b/js-snack-es-6-3/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/stlyle.css">
     <title>Document</title>
 </head>
 <body>
-    <ul id="fuorigioco"></ul>
+    <div class="table-container">
+        <ul>
+            <li>Nome Squadra</li>
+            <li>Punti totalizzati</li>
+            <li>Falli subiti</li>
+        </ul>
+    </div>
+    <!--<ul id="fuorigioco"></ul>-->
     <script type="text/javascript"src="js/script.js"></script>
 </body>
 </html>
